++++++++++
Python News
+++++++++++

What's New in Python 3.2.6?
===========================

*Release date: TBD*

Library
-------

- Issue #21766: Prevent a security hole in CGIHTTPServer by URL unquoting paths
  before checking for a CGI script at that path.

- Fix arbitrary memory access in JSONDecoder.raw_decode with a negative second
  parameter. Bug reported by Guido Vranken.

- Issue #21082: In os.makedirs, do not set the process-wide umask. Note this
  changes behavior of makedirs when exist_ok=True.

- Issue #20246: Fix buffer overflow in socket.recvfrom_into.

- Issue #12226: HTTPS is now used by default when connecting to PyPI.

- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.

- Issue #14984: On POSIX systems, when netrc is called without a filename
  argument (and therefore is reading the user's $HOME/.netrc file), it now
  enforces the same security rules as typical ftp clients: the .netrc file must
  be owned by the user that owns the process and must not be readable by any
  other user.

- Fix tkinter regression introduced by the security fix in issue #16248.

- Issue #17980: Fix possible abuse of ssl.match_hostname() for denial of
  service using certificates with many wildcards (CVE-2013-2099).

- Issue #21323: Fix http.server to again handle scripts in CGI subdirectories,
  broken by the fix for security issue #19435.  Patch by Zach Byrne.


What's New in Python 3.2.5?
===========================

*Release date: 13-May-2013*

Library
-------

- Issue #17980: Fix possible abuse of ssl.match_hostname() for denial of
  service using certificates with many wildcards (CVE-2013-2099).

- Issue #17192: Restore the patch for Issue #11729 and Issue #10309
  which were omitted in 3.2.4 when updating the bundled version of
  libffi used by ctypes.

- Issue #15535: Fix namedtuple pickles which were picking up the OrderedDict
  instead of just the underlying tuple.

- Issue #1159051: Back out a fix for handling corrupted gzip files that